--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 					<div class="newsletter__content">
 						<h2 class="newsletter__title">Sign Up Our Newsletter</h2>
 						<p class="newsletter__descr">The state of Utah in the United States is home to lots of beautiful National
-							Parks, & Bryce Canyon National Park ranks
+							Parks, Bryce Canyon National Park ranks
 							as three of the most magnificent.</p>
 					</div>
 
